--- a/templates/payment_failure.html
+++ b/templates/payment_failure.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Success</title>
+    <title>Payment Failed</title>
 </head>
 <body>
-    <h1>Payment Successful!</h1>
+    <h1>Payment Failed!</h1>
     <p>Transaction ID: {{ txnid }}</p>
-    <p>Reservation ID: {{ reservation_id }}</p>
     <!-- Other content -->
 </body>
 </html>
