--- a/templates/book_room.html
+++ b/templates/book_room.html
@@ -353,7 +353,7 @@
                     </div>
                     <div class="content">
                         <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                        <input type="email" id="email" class="input-group" placeholder="Email-Id" name="email" required>
+                        <input type="email" id="email" class="input-group" placeholder="Email ID" name="email" required>
                     </div>
                     <div class="content">
                         <i class="fa fa-phone" aria-hidden="true"></i>
