--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Ubuntu', cursive;
+            font-family: 'Ubuntu', sans-serif;
             font-weight: 400;
         }
 
